# tickerforge-spec

./: .gitignore  .pre-commit-config.yaml  .yamllint  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
contracts/: futures.yaml  options.yaml
contracts/b3/: futures.yaml
contracts/cme/: futures.yaml
docs/: add-cme-exchange.md  create-tickerforge-spec.md  release-process.md  rule-based-exchange-schedule.md  session-segments-plan.md  session-segments.md  smart-ticker-parsing.md
exchanges/: b3.yaml
packaging/python/: README.md  pyproject.toml
packaging/python/src/tickerforge_spec_data/: __init__.py
packaging/python/src/tickerforge_spec_data/spec/contracts/b3/: futures.yaml  options.yaml
packaging/python/src/tickerforge_spec_data/spec/exchanges/: cme.yaml
packaging/python/src/tickerforge_spec_data/spec/tests/b3/: futures_resolve.csv
packaging/rust/: Cargo.toml  README.md
packaging/rust/spec/schemas/: exchange_schema.yaml
packaging/rust/src/: lib.rs
rust/: Cargo.toml
rust/src/: lib.rs
schemas/: contract_cycles.yaml  exchange_schema.yaml
scripts/: check_versions.py  sync_cargo_version.py  sync_packaging_assets.py
spec/contracts/b3/: futures.yaml  options.yaml
spec/contracts/cme/: futures.yaml
spec/equities/: b3.yaml
spec/exchanges/: b3.yaml  cme.yaml
spec/schedules/: b3.yaml  cme.yaml
spec/schemas/: contract_cycles.yaml  contracts_schema.yaml  equities_schema.yaml  exchange_schema.yaml  options_schema.yaml  schedule_schema.yaml
spec/tests/b3/: B3_2023_2028_WIN_IND_DOL_calendar_FIXED.csv.xz  futures_resolve.csv  options_resolve.csv
spec/tests/cme/: futures_resolve.csv
src/: lib.rs
tickerforge_spec_data/: __init__.py
