[package]
name = "tickerforge-spec-data"
version = "0.1.0"
edition = "2021"
description = "Canonical tickerforge YAML spec tree for Rust (same content as the Python tickerforge-spec-data wheel)."
license = "MIT"
repository = "https://github.com/mesias/tickerforge-spec"
readme = "README.md"

# Ensure `cargo publish` / crates.io tarballs include the full spec tree.
include = [
    "Cargo.toml",
    "src/**/*",
    "spec/**/*",
    "README.md",
    "LICENSE",
]

[lib]
path = "src/lib.rs"
