[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tickerforge-spec-data"
version = "0.1.0"
description = "Canonical tickerforge specification (YAML/CSV) for tickerforge-py and other consumers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "TickerForge" }]

[project.urls]
Homepage = "https://github.com/mesias/tickerforge-spec"
Repository = "https://github.com/mesias/tickerforge-spec"

[tool.hatch.build.targets.sdist]
include = [
  "/spec",
  "/tickerforge_spec_data",
  "/README.md",
  "/LICENSE",
  "/VERSION",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["tickerforge_spec_data"]

[tool.hatch.build.targets.wheel.force-include]
"spec" = "tickerforge_spec_data/spec"
