[package]
name = "tickerforge-spec-data"
# Not the crates.io release (see root Cargo.toml); not checked by scripts/check_versions.py
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mesias/tickerforge-spec"
description = "TickerForge spec helpers; canonical data lives in ../spec in this repository."
publish = false

[lib]
path = "src/lib.rs"
