[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tickerforge-spec-data"
version = "0.1.0"
description = "Canonical tickerforge specification data files (YAML/CSV)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "TickerForge" }]

[project.urls]
Homepage = "https://github.com/mesias/tickerforge-spec"
Repository = "https://github.com/mesias/tickerforge-spec"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tickerforge_spec_data = ["py.typed", "spec/**/*.yaml", "spec/**/*.csv"]
